# learning-footstep-planner-cnn

./: .gitignore  README.md  pyproject.toml  train.py
checkpoints/generic_l0/: best_model.index  last_model.index  summary.pickle
dataset/: foothold_generic.py
model/erf_multi/: __init__.py  layers.py
model/mrf/: __init__.py
